<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/top_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#8C000000"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/brightness_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/brightness"
            android:src="@drawable/brightness" />

        <ImageButton
            android:id="@+id/crop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/crop"
            android:src="@drawable/crop" />

        <ImageButton
            android:id="@+id/rotate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/rotate"
            android:src="@drawable/rotate" />

        <ImageButton
            android:id="@+id/filters_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/filters"
            android:src="@drawable/filters" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#8C000000"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />

        <ImageButton
            android:id="@+id/email_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/email"
            android:src="@drawable/new_email" />

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/post_on_facebook_label"
            android:src="@drawable/share" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#00000000"
            android:contentDescription="@string/save"
            android:src="@drawable/save" />
    </LinearLayout>

</merge>