<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_us"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

	<ImageView
        android:id="@+id/about_us_rec_editor_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5pt"
        android:src="@drawable/rec_logo_small" 
        android:contentDescription="@string/rec_photo_editor_logo"/>
 
    
   <TextView
        android:id="@+id/about_us_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="8pt"
        android:layout_marginTop="5pt"
        android:text="@string/about_us_text1"/>
   <TextView
        android:id="@+id/about_us_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="8pt"
        android:layout_marginTop="5pt"
        android:text="@string/about_us_text2"/>
   <TextView
        android:id="@+id/about_us_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="8pt"
           android:layout_marginTop="5pt"
        android:text="@string/about_us_text3"/>
   

    <ImageView
        android:id="@+id/rec_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:contentDescription="@string/back"
        android:src="@drawable/goto_rec_website" />
    
    
    <ImageView
        android:id="@+id/about_us_back_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/back"
        android:src="@drawable/back_b" />

</LinearLayout>